--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "trac-qr",
   "version": "1.0.0",
   "description": "Trac Reader QR",
-  "type": "module",
   "dependencies": {
+    "next": "latest",
+    "react": "18",
+    "react-dom": "18",
     "stripe": "^16.2.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
